# NaMaster

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile_b  NERSC_installation.md  README.md  aclocal.m4  config.h.in  configure  configure.ac  run_test.sh  setup.py
doc/: Makefile  doc.tex  doc_API.tex  doc_C_API.tex  doc_scientific.tex
doc/source/: conf.py  index.rst  pymaster.rst
mvqe/: cg_invert.py  mask_2mass.fits  mvqe.py
notebooks/: bandpowers.ipynb  covariance_matrices.ipynb  flatfields.ipynb  index.ipynb  masks.ipynb  pure_E_and_B.ipynb  simple_pseudo_Cl.ipynb  workspaces.ipynb
py_namaster/: __init__.py  bins.py  field.py  namaster.i  workspace.py
pymaster/: __init__.py  bins.py  covariance.py  field.py  namaster.i  namaster_wrap.c  nmtlib.py  utils.py  workspaces.py
sandbox_flat/: check_flat.py  check_sph.py  flatmaps.py
sandbox_validation/: check_LSST.py  check_flat.py  check_flat_pure.py  check_sph.py  check_sph_pure.py  cls_flat.txt  plot_flat_pure.py  plot_sph_pure.py  run_stress_tests.sh
sandbox_validation/data/: flatmaps.py  get_cmb_mask_flat.py  (+3 more)
src/: bins.c  cg.c  common.c  common.h  common_mvqe.c  common_mvqe.h  define.h  field.c  flatsky_utils.c  healpix_extra.c  io_mvqe.c  main.c  main_mvqe.c  master.c  namaster.h  nmt_bins.c  nmt_bins_flat.c  nmt_covar.c  nmt_covar_flat.c  nmt_field.c  nmt_field_flat.c  nmt_main.c  nmt_mask.c  nmt_mask_flat.c  nmt_master.c  nmt_master_flat.c  rng.c  utils.c  utils.h
test/: check.py  cl.txt  mk_test_suite.py  nmt_checks.c  sample.c  sample_covariance.py  sample_fields.py  sample_flat.py
(+6 files in other folders)
